implemented auth functions backend

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGODB_URI=mongodb+srv://ankurparchani:ankurparchani26nextblog@cluster0.hygldq8.mongodb.net/Next-Blog
+JWT_SECRET=a-sample-secret-for-my-nextBlog-website
