--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "babel-preset-es2015": "^6.24.1",
     "bcrypt": "^5.1.1",
-    "cookies-next": "^4.0.0",
+    "jose": "^4.15.4",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.2",
     "next": "13.5.4",
