--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb+srv://ankurparchani:ankurparchani26nextblog@cluster0.hygldq8.mongodb.net/Next-Blog
+MONGODB_URI=mongodb+srv://ankurparchani:ankurparchani26nextblog@nextblog.xokt4ht.mongodb.net/Next-Blog?retryWrites=true&w=majority
 JWT_SECRET=a-sample-secret-for-my-nextBlog-website
