--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,8 @@
 .DS_Store
 *.pem
 
+
+
 # debug
 npm-debug.log*
 yarn-debug.log*
@@ -26,6 +28,7 @@ yarn-error.log*
 
 # local env files
 .env*.local
+.env
 
 # vercel
 .vercel
