--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.15",
+    "@mui/material": "^5.14.15",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.3",
     "babel-preset-es2015": "^6.24.1",
     "bcrypt": "^5.1.1",
     "jose": "^4.15.4",
@@ -16,7 +21,8 @@
     "mongoose": "^7.6.2",
     "next": "13.5.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "styled-components": "^6.1.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.1",
