--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "jose": "^4.15.4",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.2",
-    "next": "13.5.4",
+    "next": "^14.0.0",
     "react": "^18",
     "react-dom": "^18",
     "styled-components": "^6.1.0"
