--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "^14.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-toastify": "^9.1.3",
     "styled-components": "^6.1.0"
   },
   "devDependencies": {
