--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "react-loader-spinner": "^5.4.5",
     "styled-components": "^6.1.0"
   },
   "devDependencies": {
