--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.14.15",
     "@mui/styled-engine-sc": "^6.0.0-alpha.3",
     "@reduxjs/toolkit": "^1.9.7",
+    "@supabase/supabase-js": "^2.38.4",
     "babel-preset-es2015": "^6.24.1",
     "bcrypt": "^5.1.1",
     "jose": "^4.15.4",
