--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "babel-preset-es2015": "^6.24.1",
     "bcrypt": "^5.1.1",
     "jose": "^4.15.4",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.2",
     "next": "^14.0.1",
     "react": "^18",
+    "react-cookie": "^6.1.1",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-loader-spinner": "^5.4.5",
@@ -31,6 +33,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.1",
+    "@types/cookies": "^0.7.10",
     "@types/jsonwebtoken": "^9.0.4",
     "@types/node": "^20",
     "@types/react": "^18",
