--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-hot-toast": "^2.4.1",
     "react-loader-spinner": "^5.4.5",
     "react-redux": "^8.1.3",
+    "sharp": "^0.32.6",
     "styled-components": "^6.1.0"
   },
   "devDependencies": {
